fix: adjust max-height of dropdown in DesktopSearchBar for better visibility

--- a/src/features/Search/components/DesktopSearchBar/DesktopSearchBar.module.scss
+++ b/src/features/Search/components/DesktopSearchBar/DesktopSearchBar.module.scss
@@ -61,7 +61,7 @@
 			transition: grid-template-rows 0.3s ease, border-radius 0.3s ease;
 
 			overflow: hidden;
-			max-height: 100dvh;
+			max-height: 66dvh;
 
 			background-color: white;
 			color: black;
